# gidx

./: CMakeLists.txt  SelfGrammarIndex.cpp  SelfGrammarIndex.h  SelfGrammarIndexBS.cpp  SelfGrammarIndexBS.h  SelfGrammarIndexPT.cpp  SelfGrammarIndexPT.h  SelfGrammarIndexPTS.cpp  SelfGrammarIndexPTS.h  binary_relation.cpp  binary_relation.h  compressed_grammar.cpp  compressed_grammar.h  run_experiments.sh
bench/: breakdown_space.cpp  create_files_patterns.cpp  grammar_benchmark.cpp  idx_build.cpp  idx_extract_performance.cpp  idx_locate_performance.cpp  pattern_length_bench.cpp  repetitive_collections.h
tests/: binary_relation_test.cpp  collections.cpp  self_index_PT.cpp  self_index_bin_search.cpp  wavelet_tree_ap.cpp
tests/utils/: grammar_test.cpp  patricia_tree_test.cpp
trees/: bp_tree.cpp  bp_tree.h  dfuds_tree.cpp  dfuds_tree.h
trees/patricia_tree/: compact_patricia_tree.cpp  compact_patricia_tree.h  patricia_tree.h
trees/trie/: Trie.h  compact_trie.cpp  compact_trie.h
utils/: grammar.cpp  grammar.h
utils/repair/: RePair.cpp  RePair.h
